# curated-search

./: .gitignore  Dockerfile  Makefile  Readme.md  docker-compose-dev.yml  manage.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/workflows/: django.yml
core/: celery.py  tasks.py  urls.py
core/settings/: base.py  development.py  settings-test.py
feed/: admin.py  models.py  urls.py  views.py
feed/management/commands/: update_content.py  update_feeds.py
feed/migrations/: 0001_initial.py  0002_auto_20200713_1137.py  0003_auto_20200713_1307.py  0004_feed_active.py  0005_alter_entry_feed.py
pages/: tests.py
templates/: _base.html  _base2.html  home.html
templates/feed/: search.html
tests/feed/: test_models.py  test_update_content.py  test_update_feeds.py
